# bitnet-engine

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: ci.yml
benches/: gemv_bench.rs
cuda/include/: bitnet_common.cuh
cuda/kernels/: attention.cu  bitgemv.cu  rmsnorm.cu
scripts/: convert_hf_weights.py  profile_cuda.sh
src/: cuda_ffi.rs  error.rs  lib.rs  main.rs
src/ops/: cpu_gemv.rs  linear.rs  mod.rs  rope.rs
src/quantization/: loader.rs  mod.rs  pack.rs  scale.rs
src/runtime/: engine.rs  kv_cache.rs  mod.rs  scheduler.rs  session.rs
src/utils/: memory.rs  mod.rs  timer.rs
tests/: integration_test.rs
